k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: subsidyapp-prod
  labels:
    name: subsidyapp-prod
    environment: production
